--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
       <artifactId>storm-core</artifactId>
       <version>1.0.2</version>
       <!--<scope>provided</scope>-->
+      <scope>provided</scope>
     </dependency>
 	  <dependency>
 		  <groupId>redis.clients</groupId>
